; ModuleID = '/home/carl/AnghaBench/reactos/dll/win32/advapi32/misc/extr_sysfunc.c_KsecDeviceIoControl.c'
source_filename = "/home/carl/AnghaBench/reactos/dll/win32/advapi32/misc/extr_sysfunc.c_KsecDeviceIoControl.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@KsecDeviceHandle = common dso_local global i32* null, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32, i32, i32, i32, i32)* @KsecDeviceIoControl to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @KsecDeviceIoControl(i32 %0, i32 %1, i32 %2, i32 %3, i32 %4) #0 {
  %6 = alloca i32, align 4
  %7 = alloca i32, align 4
  %8 = alloca i32, align 4
  %9 = alloca i32, align 4
  %10 = alloca i32, align 4
  %11 = alloca i32, align 4
  %12 = alloca i32, align 4
  %13 = alloca i32, align 4
  store i32 %0, i32* %7, align 4
  store i32 %1, i32* %8, align 4
  store i32 %2, i32* %9, align 4
  store i32 %3, i32* %10, align 4
  store i32 %4, i32* %11, align 4
  %14 = load i32*, i32** @KsecDeviceHandle, align 8
  %15 = icmp eq i32* %14, null
  br i1 %15, label %16, label %24

16:                                               ; preds = %5
  %17 = call i32 (...) @KsecOpenDevice()
  store i32 %17, i32* %13, align 4
  %18 = load i32, i32* %13, align 4
  %19 = call i32 @NT_SUCCESS(i32 %18)
  %20 = icmp ne i32 %19, 0
  br i1 %20, label %23, label %21

21:                                               ; preds = %16
  %22 = load i32, i32* %13, align 4
  store i32 %22, i32* %6, align 4
  br label %33

23:                                               ; preds = %16
  br label %24

24:                                               ; preds = %23, %5
  %25 = load i32*, i32** @KsecDeviceHandle, align 8
  %26 = load i32, i32* %7, align 4
  %27 = load i32, i32* %8, align 4
  %28 = load i32, i32* %9, align 4
  %29 = load i32, i32* %10, align 4
  %30 = load i32, i32* %11, align 4
  %31 = call i32 @NtDeviceIoControlFile(i32* %25, i32* null, i32* null, i32* null, i32* %12, i32 %26, i32 %27, i32 %28, i32 %29, i32 %30)
  store i32 %31, i32* %13, align 4
  %32 = load i32, i32* %13, align 4
  store i32 %32, i32* %6, align 4
  br label %33

33:                                               ; preds = %24, %21
  %34 = load i32, i32* %6, align 4
  ret i32 %34
}

declare dso_local i32 @KsecOpenDevice(...) #1

declare dso_local i32 @NT_SUCCESS(i32) #1

declare dso_local i32 @NtDeviceIoControlFile(i32*, i32*, i32*, i32*, i32*, i32, i32, i32, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
